Prof. Rupp featured on Battery Generation Podcast
September 27, 2023
Prof. Rupp was a guest on a recent <a href="https://www.youtube.com/watch?v=lr7-PzSr5SU" target="_blank">episode of the Battery Generation Podcast</a>, where she discussed the promise and current status of solid-state batteries with Patrick Rosen. The episode has been viewed over 20k times so far!

Thomas wins DMSE's best PhD thesis award
May 24, 2023
Thomas is this year’s recipient of the best PhD thesis award at the Department of Material Science and Engineering at MIT. Thomas's PhD thesis investigates opto-ionic properties of doped ceria and includes the first observations of opto-ionic space charge modulation at grain boundary regions in a ceramic.  Congratulations Thomas!

Thorben receives Linde/MDSI Fellowship
May 15, 2023
Thorben has received the <a href = "https://www.mdsi.tum.de/en/mdsi/research/funding-support/doctoral-fellowships/" target = "_blank">Linde/MDSI Fellowship</a> for his work applying data mining and machine learning to battery material discovery and optimization. The fellowship will support Thorben's research and promote interdisciplinary research within TUM. Congratulations Thorben!

Team's work featured for International Women’s Day by the RSC
March 16, 2023
The work of the team and Jennifer has been featured by the Royal Society of Chemistry for International Women's day. Relevant tweets can be found <a href="https://twitter.com/JMaterChem/status/1633471104005054472" target="_blank">here</a> and <a href="https://twitter.com/RSC_Energy/status/1633478710614450178" target="_blank">here</a> highlighting a recent open access publication.

Prof. Rupp accepts position on the advisory board of Advanced Energy Materials
June 30, 2022