@@ -170,6 +170,12 @@
 
 
 
+
+
+
+
+
+
 <!-- START NEWS BAR -->
 <div class="container-fluid p-0 news-bar text-white">
     <div class="row p-0 m-0">
@@ -177,19 +183,19 @@
             <div class="ecm-primary font-weight-bold text-center align-middle"> NEWS </div>
         </div>
         <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Prof. Rupp featured on Battery Generation Podcast </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Jennifer participates in panel at BMW Technology Days </a>
             <br>
-            <small class="ecm-primary font-italic"> September 27, 2023 </small>
+            <small class="ecm-primary font-italic"> October 20, 2023 </small>
         </div>
         <div class="col-sm p-1 bg-dark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Thomas wins DMSE's best PhD thesis award </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Jennifer sits on panel at 50th anniversary celebration of the European Patent Convention </a>
             <br>
-            <small class="ecm-primary font-italic"> May 24, 2023 </small>
+            <small class="ecm-primary font-italic"> October 5, 2023 </small>
         </div>
         <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Thorben receives Linde/MDSI Fellowship </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Prof. Rupp featured on Battery Generation Podcast </a>
             <br>
-            <small class="ecm-primary font-italic"> May 15, 2023 </small>
+            <small class="ecm-primary font-italic"> September 27, 2023 </small>
         </div>
     </div>
 </div>
