@@ -101,6 +101,24 @@
 
 <tr><td>
     <a class="anchor" id="news1"></a>
+    <h6 class="mb-1">Jennifer participates in panel at BMW Technology Days </h6> 
+    <div class='font-weight-light'>October 20, 2023</div>
+    <p><small>Jennifer took part in a bilateral panel talk at BMW Technology Day. There, she discussed the future of energy storage with BMW's Frank Weber (Board of Management for R&D), BMW's Ilka Horstmeier (Board of Management), as well as TUM President Thomas Hofmann.</small></p>
+<p><small><img src="IMG_4486.jpg" class=""></small></p>
+
+</td></tr>
+
+<tr><td>
+    <a class="anchor" id="news2"></a>
+    <h6 class="mb-1">Jennifer sits on panel at 50th anniversary celebration of the European Patent Convention </h6> 
+    <div class='font-weight-light'>October 5, 2023</div>
+    <p><small>The European Patent Office celebrated 50 years! Chancellor Olaf Scholz and President of the European Commission von der Leyen gave speeches, and Jennifer took part in a panel to discuss Technologies for a Sustainable Future. More details and live streams of the event can be found <a href="https://www.epo.org/en/about-us/50-epc-anniversary/official-celebrations" target="_blank">here</a>.</small></p>
+<p><small><img src="b0f2ebe8-d3a6-4690-a536-03a4534c93d5.JPG" class=""></small></p>
+
+</td></tr>
+
+<tr><td>
+    <a class="anchor" id="news3"></a>
     <h6 class="mb-1">Prof. Rupp featured on Battery Generation Podcast </h6> 
     <div class='font-weight-light'>September 27, 2023</div>
     <p><small>Prof. Rupp was a guest on a recent <a href="https://www.youtube.com/watch?v=lr7-PzSr5SU" target="_blank">episode of the Battery Generation Podcast</a>, where she discussed the promise and current status of solid-state batteries with Patrick Rosen. The episode has been viewed over 20k times so far!</small></p>
@@ -108,7 +126,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news2"></a>
+    
     <h6 class="mb-1">Thomas wins DMSE's best PhD thesis award </h6> 
     <div class='font-weight-light'>May 24, 2023</div>
     <p><small>Thomas is this year’s recipient of the best PhD thesis award at the Department of Material Science and Engineering at MIT. Thomas's PhD thesis investigates opto-ionic properties of doped ceria and includes the first observations of opto-ionic space charge modulation at grain boundary regions in a ceramic.  Congratulations Thomas!</small></p>
@@ -116,7 +134,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news3"></a>
+    
     <h6 class="mb-1">Thorben receives Linde/MDSI Fellowship </h6> 
     <div class='font-weight-light'>May 15, 2023</div>
     <p><small>Thorben has received the <a href = "https://www.mdsi.tum.de/en/mdsi/research/funding-support/doctoral-fellowships/" target = "_blank">Linde/MDSI Fellowship</a> for his work applying data mining and machine learning to battery material discovery and optimization. The fellowship will support Thorben's research and promote interdisciplinary research within TUM. Congratulations Thorben!</small></p>
