@@ -1,3 +1,13 @@
+Jennifer participates in panel at BMW Technology Days
+October 20, 2023
+Jennifer took part in a bilateral panel talk at BMW Technology Day. There, she discussed the future of energy storage with BMW's Frank Weber (Board of Management for R&D), BMW's Ilka Horstmeier (Board of Management), as well as TUM President Thomas Hofmann. 
+<img src="IMG_4486.jpg" class="">
+
+Jennifer sits on panel at 50th anniversary celebration of the European Patent Convention
+October 5, 2023
+The European Patent Office celebrated 50 years! Chancellor Olaf Scholz and President of the European Commission von der Leyen gave speeches, and Jennifer took part in a panel to discuss Technologies for a Sustainable Future. More details and live streams of the event can be found <a href="https://www.epo.org/en/about-us/50-epc-anniversary/official-celebrations" target="_blank">here</a>.
+<img src="b0f2ebe8-d3a6-4690-a536-03a4534c93d5.JPG" class="">
+
 Prof. Rupp featured on Battery Generation Podcast
 September 27, 2023
 Prof. Rupp was a guest on a recent <a href="https://www.youtube.com/watch?v=lr7-PzSr5SU" target="_blank">episode of the Battery Generation Podcast</a>, where she discussed the promise and current status of solid-state batteries with Patrick Rosen. The episode has been viewed over 20k times so far!
